modo escuro add

--- a/monge-pesoal--main/aulas senac/monge trabalho do semestre/index.html
+++ b/monge-pesoal--main/aulas senac/monge trabalho do semestre/index.html
@@ -29,7 +29,12 @@
         </a>
         <a href="pg2.html">pagina 1</a>
         <a href="pg3.html">pagina2</a>
-
+        <!-- Botão do modo escuro -->
+<button id="darkModeToggle" aria-label="Alternar modo">
+    🌞
+  </button>
+  
+  <script src="darkmode.js"></script>
     </nav>
     <!-- fim do header  -->
 
@@ -99,7 +104,35 @@
 
 
     </footer>
+    <script>
+        const btn = document.getElementById('darkModeToggle');
 
+function ativarModoEscuro() {
+    document.body.classList.add('dark-mode');
+    btn.innerText = '🌙';
+}
+function desativarModoEscuro() {
+    document.body.classList.remove('dark-mode');
+    btn.innerText = '🌞';
+}
+
+// Verifica se o usuário já tem preferência salva
+if (localStorage.getItem('modo-escuro') === 'sim') {
+    ativarModoEscuro();
+} else {
+    desativarModoEscuro();
+}
+
+btn.addEventListener('click', () => {
+    if (document.body.classList.contains('dark-mode')) {
+        desativarModoEscuro();
+        localStorage.setItem('modo-escuro', 'nao');
+    } else {
+        ativarModoEscuro();
+        localStorage.setItem('modo-escuro', 'sim');
+    }
+});
+        </script>
 </body>
 
 </html>
